-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Beta1
-
macOS11.0.1 x64 virtual machine, branch 6.3
-
-
851143eff1 (qt/qtbase/dev) 851143eff1 (qt/tqtc-qtbase/dev) 8743370db4 (qt/qtbase/6.3) 8743370db4 (qt/tqtc-qtbase/6.3)
Install Qt6.3.0 binaries on macOS and launch Designer, crashes with:
No MTLDevice
zsh: segmentation fault ./Designer
(gui/rhi/qrhimetal.mm:375: qWarning("No MTLDevice");)
Launches on macOS11.6 ARM64.
- clones
-
QTBUG-98472 [REG 6.2.1->6.3.0] Designer not launching on macOS
-
- Closed
-
- is duplicated by
-
QTBUG-100557 Starting Designer segmentation fault 11
-
- Closed
-
- relates to
-
QTBUG-100285 Windows: Qt Designer crash when selecting QWebEngineView
-
- Closed
-
| For Gerrit Dashboard: QTBUG-100441 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 394571,2 | macOS: Prevent recursion when modifying the edit menu | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 394876,2 | macOS: Prevent recursion when modifying the edit menu | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |